sumo/tests/sumo/errors/network/edge/lane/root__edge__lane__empty12/errors.sumo
Error: Shape of lane '1_1' is broken.
 Can not build according edge.
Error: Trying to add an unknown lane ('1_1') as continuation.
Error: An unknown lane ('1_1') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_1').
Quitting (on error).
